@@ -25,7 +25,7 @@ To qualify as a pseries, an object needs to have the following features:
 \itemize{
 \item class contains \code{"pseries"} and there are at least two classes (\code{"pseries"} and the basic class),
 \item have an appropriate index attribute (defines the panel structure),
-\item any of \code{is.numeric}, \code{is.factor}, \code{is.logical}, \code{is.character} is \code{TRUE}.
+\item any of \code{is.numeric}, \code{is.factor}, \code{is.logical}, \code{is.character}, \code{is.complex} is \code{TRUE}.
 }
 
 }
